增加docker跳转接口